--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@
  * Thanks for MaterializeCSS.com
  */
 
-.default_color{background-color: #303F9F !important}
+.default_color{background-color: black !important}
 
-.default_color_text{color: #3F51B5 !important}
+.default_color_text{color: #757575 !important}
 
 .icon-block {
     padding: 0 15px;
@@ -15,12 +15,13 @@
 
 #intro, #work, #team {padding-top: 4rem;}
 
+/* 632px*/
 
 #index-banner {
-    min-height: 632px;
+    min-height: 440px;      
     max-height: 864px;
     position: relative;
-    background-color: #3F51B5 ;
+    background-color: black ;
 }
 
 #nav_f{
@@ -48,20 +49,20 @@
 
 .text_h2 {font-weight: 100;margin-bottom: 4%; line-height: 4.5rem;}
 
-.span_h2 {font-weight: 300;color: #3F51B5;}
+.span_h2 {font-weight: 300;color: #757575;}
 
-.text_b{color: #3F51B5;}
+.text_b{color: #757575;}
 
 .in{font-weight: 400 !important; font-style: normal !important;}
 
 .promo i {
-    color: #3F51B5;
+    color: #757575;
     font-size: 7rem;
     display: block;
 }
-.card-content a {color: #3F51B5;}
+.card-content a {color: #757575;}
 
-.card-content a:hover {color: #3F51B5;}
+.card-content a:hover {color: #757575;}
 
 #work, #team{background: rgb(247, 247, 247);}
 
@@ -75,6 +76,8 @@ nav ul a {
     font-weight: 300;
     padding: 0px 15px;
 }
+
+
 
 .cd-headline.type .cd-words-wrapper {
     vertical-align: top;
@@ -112,7 +115,7 @@ nav ul a {
 }
 
 .cd-headline.type .cd-words-wrapper.selected b {
-    color: #3F51B5;
+    color: black;
 }
 
 .cd-headline.type b {
