--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,7 @@
 	margin-top: -160px;
 	z-index: 10 !important;
 	position: relative;
+	margin-bottom: 50px;
 }
 
 .text {
@@ -253,4 +254,6 @@
 }
 
 #work .row .ligh
+
+
 
